Bug 1334480 - Don't try to update a nullptr registration. r=asuth a=jcristau